# book-catalog

./: Dockerfile  LICENSE  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 18ae6b50d74d_cria_romancista.py  4afbeae086fd_cria_romancista_novamente.py  4d06859f5187_adiciona_tabela_livro.py  64ade1dde52d_altera_nome_coluna.py  cf114405d41a_alter_table_user.py  ea73594d422a_cria_tabela_usuarios.py
book_catalog/: app.py
book_catalog/models/: __init__.py  livro.py  romancista.py  usuario.py
book_catalog/routers/: auth.py  livros.py  romancistas.py  usuario.py
book_catalog/schemas/: livro.py  romancista.py  usuario.py
book_catalog/utils/: database.py  security.py  settings.py
infrastructure/: .terraform.lock.hcl  ecr.tf  eks.tf  iam.tf  main.tf  terraform.tf  vpc.tf
infrastructure/manifests/: book_catalog_app.yaml  book_catalog_app_service.yaml  book_catalog_db.yaml  book_catalog_db_service.yaml  book_catalog_secret.yaml  book_catalog_volume.yaml  ingress.yaml
tests/: conftest.py  test_auth.py  test_database.py  test_livro.py  test_romancista.py  test_security.py  test_usuario.py
